gitignore jamais 2 sans 3

--- a/.gitignore
+++ b/.gitignore
@@ -42,9 +42,6 @@ testem.log
 Thumbs.db
 
 
-apica/.vs/*
-apica/bin/*
-apica/obj/*
-apic/.vs/*
-apic/bin/*
-apic/obj/*
+**/.vs/**
+**/bin/**
+**/obj/**
