--- a/front/organizer-front/.gitignore
+++ b/front/organizer-front/.gitignore
@@ -42,9 +42,6 @@ testem.log
 Thumbs.db
 
 
-apica/.vs/*
-apica/bin/*
-apica/obj/*
-apic/.vs/*
-apic/bin/*
-apic/obj/*
+**/.vs/**
+**/bin/**
+**/obj/**
