--- a/front/organizer-front/package.json
+++ b/front/organizer-front/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
     "@fortawesome/angular-fontawesome": "^0.13.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.1.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
     "material": "^0.5.3",
     "path": "^0.12.7",
     "rxjs": "~7.8.0",
@@ -31,6 +34,7 @@
     "@angular-devkit/build-angular": "^16.0.3",
     "@angular/cli": "~16.0.3",
     "@angular/compiler-cli": "^16.0.0",
+    "@angular/localize": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
